feat: configuration project

--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,2 @@
-DATABASE_URL=postgres://postgres:12345@localhost:5432/driven_bet_test
+DATABASE_URL=postgres://postgres:12345@localhost:5432/devio_food_test
 PORT=5000
