--- a/package.json
+++ b/package.json
@@ -4,54 +4,64 @@
     "description": "",
     "main": "index.js",
     "directories": {
-      "test": "tests"
+        "test": "tests"
     },
     "scripts": {
-      "build": "npx tsc",
-      "migration:run": "prisma migrate deploy",
-      "start":" prisma migrate deploy && node dist/server.js",
-      "dev": "nodemon src/server.ts",
-      "test": "npm run test:load-envs jest  -- --passWithNoTests --runInBand",
-      "test:coverage": "jest --coverage",
-      "test:migration:run": "npm run test:load-envs prisma migrate deploy",
-      "test:migration:generate": "npm run test:load-envs npx prisma migrate dev",
-      "test:watch": "npm run test jest --watch --passWithNoTests --runInBand",
-      "test:load-envs": "dotenv -e .env.test",
-      "dev:load-envs": "dotenv -e .env.development",
-      "dev:migration:run": "npm run dev:load-envs prisma migrate deploy",
-      "dev:migration:generate": "npm run dev:load-envs prisma migrate dev",
-      "test:report": "dotenv -e .env.test prisma migrate deploy & dotenv -e .env.test jest -- --coverage --runInBand --coverageReporters=json-summary --coverageDirectory=coverage --collectCoverageFrom='**/*.ts'"
+        "build": "npx tsc",
+        "migration:run": "prisma migrate deploy",
+        "start": " prisma migrate deploy && node dist/server.js",
+        "dev": "nodemon src/server.ts",
+        "test": "npm run test:load-envs jest  -- --passWithNoTests --runInBand",
+        "test:coverage": "jest --coverage",
+        "test:migration:run": "npm run test:load-envs prisma migrate deploy",
+        "test:migration:generate": "npm run test:load-envs npx prisma migrate dev",
+        "test:watch": "npm run test jest --watch --passWithNoTests --runInBand",
+        "test:load-envs": "dotenv -e .env.test",
+        "dev:load-envs": "dotenv -e .env.development",
+        "dev:migration:run": "npm run dev:load-envs prisma migrate deploy",
+        "dev:migration:generate": "npm run dev:load-envs prisma migrate dev",
+        "test:report": "dotenv -e .env.test prisma migrate deploy & dotenv -e .env.test jest -- --coverage --runInBand --coverageReporters=json-summary --coverageDirectory=coverage --collectCoverageFrom='**/*.ts'"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "@faker-js/faker": "^8.3.1",
-      "@prisma/client": "^4.9.0",
-      "@types/node": "^20.10.1",
-      "cors": "^2.8.5",
-      "dotenv": "^16.0.3",
-      "dotenv-expand": "^10.0.0",
-      "express": "^4.18.2",
-      "http-status": "^1.7.3",
-      "joi": "^17.11.0",
-      "pg": "^8.11.3",
-      "typescript": "^5.3.2"
+        "@faker-js/faker": "^8.3.1",
+        "@prisma/client": "^4.9.0",
+        "@types/node": "^20.10.1",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "dotenv-expand": "^10.0.0",
+        "express": "^4.18.2",
+        "http-status": "^1.7.3",
+        "joi": "^17.11.0",
+        "pg": "^8.11.3"
     },
     "devDependencies": {
-      "@types/cors": "^2.8.13",
-      "@types/express": "^4.17.21",
-      "@types/jest": "^29.5.10",
-      "@types/node": "^18.14.0",
-      "@types/supertest": "^2.0.16",
-      "dotenv-cli": "^7.0.0",
-      "cross-env": "^7.0.3",
-      "nodemon": "^3.0.1",
-      "prisma": "^4.9.0",
-      "supertest": "^6.3.3",
-      "ts-node": "^10.9.1",
-      "jest": "^29.7.0",
-      "ts-jest": "^29.1.1"
+        "@types/cors": "^2.8.13",
+        "@types/express": "^4.17.21",
+        "@types/jest": "^29.5.10",
+        "@types/node": "^18.14.0",
+        "@types/supertest": "^2.0.16",
+        "@typescript-eslint/eslint-plugin": "^6.19.0",
+        "@typescript-eslint/parser": "^6.19.0",
+        "cross-env": "^7.0.3",
+        "dotenv-cli": "^7.0.0",
+        "eslint": "^8.56.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-jsx-a11y": "^6.8.0",
+        "eslint-plugin-prettier": "^5.1.3",
+        "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "jest": "^29.7.0",
+        "nodemon": "^3.0.1",
+        "prettier": "^3.2.4",
+        "prisma": "^4.9.0",
+        "supertest": "^6.3.3",
+        "ts-jest": "^29.1.1",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.3.3"
     }
-  }
-  
+}
