feat: tests route getAllProducts

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,5 +32,6 @@
         "@typescript-eslint/explicit-module-boundary-types": 0,
         "import/prefer-default-export": 0,
         "global-require": 0
-    }
+    },
+    "ignorePatterns": ["tests/helper.ts", "tests/integrations/products.test.ts", "/tests/factories/products/index.ts"]
 }
