--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,5 +33,5 @@
         "import/prefer-default-export": 0,
         "global-require": 0
     },
-    "ignorePatterns": ["tests/helper.ts", "tests/integrations/products.test.ts", "/tests/factories/products/index.ts"]
+    "ignorePatterns": ["tests/helper.ts", "tests/integrations/products.test.ts", "/tests/factories/products/index.ts", "/tests/integrations/orders.test.ts"]
 }
