feat: config to deploy

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,7 @@
     "parserOptions": {
         "ecmaVersion": 2018,
         "sourceType": "module",
-        "project": "./tsconfig.json"
+        "project": ["./tsconfig.json", "/prisma/tsconfig.json"]
     },
     "rules": {
         "import/no-unresolved": 0,
@@ -34,5 +34,5 @@
         "no-underscore-dangle": "off",
         "global-require": 0
     },
-    "ignorePatterns": ["tests/helper.ts", "tests/integrations/products.test.ts", "/tests/factories/products/index.ts", "/tests/integrations/orders.test.ts", "/tests/factories/orders/index.ts", "/tests/factories/finishes/index.ts"]
+    "ignorePatterns": ["tests/helper.ts", "tests/integrations/products.test.ts", "/tests/factories/products/index.ts", "/tests/integrations/orders.test.ts", "/tests/factories/orders/index.ts", "/tests/factories/finishes/index.ts", "prisma/seed.ts"]
 }
