--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "include":["src/**/*.ts"],
+    "include":["src/**/*.ts", "prisma/seed.ts"],
 	"compilerOptions":{
     	"outDir": "dist",
         "esModuleInterop": true,
